# xwlogin

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.xwlogin.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: compliance.yml  publish.yml  unit.yml
src/: xwlogin.py
src/exonware/: __init__.py
src/exonware/xwauth/: __init__.py
src/exonware/xwauth/identity/: __init__.py  _provider_registry.py  api_paths.py  base.py  contracts.py  defs.py  errors.py  extensions.py  facade.py  ops_hooks.py  policy_decision.py  stack.py  version.py
src/exonware/xwauth/identity/audit/: __init__.py  context.py  manager.py
src/exonware/xwauth/identity/authentication/: __init__.py  account_linking.py  anonymous.py  attestation_trust.py  challenge_store.py  challenge_store_redis.py  email_password.py  magic_link.py  mfa_webauthn_audit.py  phone_otp.py  webauthn.py  webauthn_credential_index.py  webauthn_credential_index_redis.py  webauthn_factory.py
src/exonware/xwauth/identity/authorization/: __init__.py  abac.py  fga.py  rbac.py  rebac.py
src/exonware/xwauth/identity/bench/: __init__.py  __main__.py  microbench.py
src/exonware/xwauth/identity/clients/: __init__.py  async_client.py  entity_session_manager.py  oauth2_client.py  oauth_client.py
src/exonware/xwauth/identity/config/: __init__.py  base_config.py  config.py
src/exonware/xwauth/identity/core/: __init__.py  dcr.py  logout.py  oauth2.py  oidc.py  par.py  pkce.py  saml.py
src/exonware/xwauth/identity/federation/: __init__.py  broker.py  errors.py  idp_quirks.py  idp_registry.py  jwks_cache.py  mapping.py  oidc_access_token_hash.py  oidc_id_token.py  pkce.py  types.py
src/exonware/xwauth/identity/foundation/: __init__.py  contracts.py  defs.py
src/exonware/xwauth/identity/handlers/: __init__.py  _common.py  authenticators.py  login_http_catalog.py  oauth_form_post.py
src/exonware/xwauth/identity/integrations/: __init__.py  fastapi.py  flask.py
src/exonware/xwauth/identity/jose/: __init__.py  jwa.py  jwe.py  jwk.py  jws.py  jwt.py  key_manager.py
src/exonware/xwauth/identity/oauth_http/: __init__.py  discovery.py  errors.py  resource_owner_session.py
src/exonware/xwauth/identity/ops/: __init__.py  abuse_resistance.py  admin_api_openapi_parity.py  airgap_deployment.py  b2b_delegated_admin.py  compliance_pack.py  data_residency.py  email_magic_link_ops.py  extension_model_readiness.py  infra_as_code_tenants.py  kubernetes_operator_readiness.py  login_ui_accessibility.py  multi_region_auth.py  oidc_self_cert_readiness.py  pen_test_engagement.py  research_program.py  session_device_reference_ui.py  tco_evidence.py
src/exonware/xwauth/identity/organizations/: __init__.py  lifecycle.py  manager.py  organization.py
src/exonware/xwauth/identity/schema/: __init__.py  access_control.py  authorization.py  contracts.py  security_validator.py
src/exonware/xwauth/identity/scim/: __init__.py  (+4 more)
src/exonware/xwlogin/: __init__.py  api_connector.py  audit_connector.py  auth_connector.py  config_connector.py  discovery_connector.py  facade_connector.py  form_post_connector.py  handlers_common_connector.py  mock_connector.py  oauth_errors_connector.py  ops_connector.py  provider_connector.py  stack.py  storage_connector.py  test_support.py  tokens_connector.py  version.py  webauthn_connector.py
src/exonware/xwlogin/authentication/: __init__.py  account_linking.py  anonymous.py  attestation_trust.py  challenge_store.py  challenge_store_redis.py  email_password.py  magic_link.py  mfa_webauthn_audit.py  phone_otp.py  webauthn.py  webauthn_credential_index.py  webauthn_credential_index_redis.py
src/exonware/xwlogin/clients/: __init__.py  async_client.py  entity_session_manager.py  oauth2_client.py  oauth_client.py
src/exonware/xwlogin/foundation/: __init__.py  contracts.py  defs.py
src/exonware/xwlogin/handlers/: __init__.py  api_services_connector.py  authenticators.py  connector_auth_factories.py  connector_common.py  connector_http.py  connector_route_mixins.py  connector_transport.py  oauth_form_post.py
src/exonware/xwlogin/providers/: __init__.py  active_directory.py  adfs.py  akhtaboot.py  alibaba_tongyi.py  alipay.py  amazon.py  amazon_cognito_user_pool.py  anghami.py  anthropic.py  aol.py  apac_india_sea_cis_stubs.py  apple.py  apple_music.py  auth0.py  auth_js_meta.py  azure_openai.py  baidu.py  battle_net.py  bayt.py  bigcommerce.py  bigo_live.py  bilibili.py  bitbucket.py  bluesky.py  box.py  box_enterprise.py  callback_providers.py  careem.py  chatglm.py  china_wecom_unionpay_stubs.py  circleci.py  codepen.py  codesandbox.py  cohere.py  coupang.py  crunchyroll.py  deepseek.py  deezer.py  deviantart.py  (+152 more)
src/exonware/xwlogin/security/: __init__.py  backup_codes.py  mfa_policy.py  mfa_secrets.py
tests/: conftest.py  runner.py
tests/0.core/: conftest.py  test_architecture_boundary.py  test_import.py
tests/1.unit/authentication_tests/: __init__.py  conftest.py  runner.py  test_account_linking.py  test_anonymous.py  test_email_password.py  test_magic_link.py  test_mfa.py  test_phone_otp.py
tests/1.unit/clients_tests/: __init__.py  conftest.py  runner.py  test_entity_session_manager.py  test_oauth2_clients.py
tests/1.unit/config_tests/: __init__.py  test_xwauth_config_validate.py
tests/1.unit/federation_tests/: __init__.py  test_oidc_access_token_hash.py  test_pkce_helpers.py
tests/1.unit/handlers_tests/: test_oauth_form_post.py
tests/1.unit/package_tests/: __init__.py  test_connect_discovery.py
tests/1.unit/providers_tests/: __init__.py  runner.py  test_apple_provider.py  test_callback_providers.py  test_github_provider.py  test_google_provider.py  test_ldap_provider.py  test_microsoft_provider.py  test_new_providers.py  test_provider_registry.py  test_samsung_provider.py
tests/1.unit/security_tests/: test_critical_regressions.py  test_mfa_passkeys_security.py  test_policy_decision_org_boundary.py  test_revoked_jti_store.py  test_token_introspection_opaque.py
tests/_vendor/: jwt.py  requests.py
tests/_vendor/fastapi/: __init__.py  security.py
(+98 files in other folders)
