# Source size (src/*): ~815.6 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwlogin"
dynamic = ["version"]
description = "Login layer for XW-Auth: IdP catalog, OAuth RP clients, WebAuthn/MFA, first-party authenticators"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]
keywords = ["oauth2", "oidc", "identity", "login", "providers", "exonware"]
classifiers = []
dependencies = [
  "pyotp",
  # REF_41 §1 / §7: target is **no** xwauth here; kept until foundation types move into xwlogin (pip cycle).
  "exonware-xwauth",
  "exonware-xwsystem",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem; see lazy/full).
xw = [
  "exonware-xwaction",
  "exonware-xwapi",
  "exonware-xwauth",
  "exonware-xwdata",
  "exonware-xwentity",
  "exonware-xwjson",
  "exonware-xwmodels",
  "exonware-xwnode",
  "exonware-xwquery",
]
lazy = [
  "exonware-xwlogin[xw]",
  "exonware-xwlazy",
  "exonware-xwsystem[lazy]",
  "exonware-xwaction[xw]",
  "exonware-xwapi[xw]",
  "exonware-xwauth[xw]",
  "exonware-xwdata[xw]",
  "exonware-xwentity[xw]",
  "exonware-xwjson[xw]",
  "exonware-xwmodels[xw]",
  "exonware-xwnode[xw]",
  "exonware-xwquery[xw]",
]
full = [
  "exonware-xwlogin[xw]",
  "exonware-xwsystem[full]",
  "exonware-xwaction[xw]",
  "exonware-xwapi[xw]",
  "exonware-xwauth[xw]",
  "exonware-xwdata[xw]",
  "exonware-xwentity[xw]",
  "exonware-xwjson[xw]",
  "exonware-xwmodels[xw]",
  "exonware-xwnode[xw]",
  "exonware-xwquery[xw]",
]
dev = [
  "exonware-xwlogin[full]",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/exonware/xwlogin"
Repository = "https://github.com/exonware/xwlogin"
Issues = "https://github.com/exonware/xwlogin/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["--tb=short"]
markers = [
  "xwlogin_core: fast core / boundary tests (GUIDE_51)",
  "xwlogin_unit: unit-layer tests (GUIDE_51)",
]

[tool.hatch.version]
path = "src/exonware/xwlogin/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwlogin"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]
