# Source size (src/*): ~815.6 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwlogin"
dynamic = ["version"]
description = "Login and IdP catalog: WebAuthn/MFA, first-party authenticators — integrate authorization servers via OAuth 2.0 / OIDC HTTP APIs (uses exonware-xwauth types when embedded in-process)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]
keywords = ["oauth2", "oidc", "identity", "login", "providers", "exonware"]
classifiers = []
dependencies = [
  "pyotp",
  # Shared AS types and HTTP handler surface today live in exonware-xwauth; keep HTTP/API boundaries
  # OAuth 2.0 / OIDC-first for cross-product integration.
  "exonware-xwauth",
  "exonware-xwsystem",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem; see lazy/full).
xw = [
  "exonware-xwaction",
  "exonware-xwapi",
  "exonware-xwdata",
  "exonware-xwentity",
  "exonware-xwjson",
  "exonware-xwmodels",
  "exonware-xwnode",
  "exonware-xwquery",
]
lazy = [
  "exonware-xwlogin[xw]",
  "exonware-xwlazy",
  "exonware-xwsystem[lazy]",
  "exonware-xwaction[xw]",
  "exonware-xwapi[xw]",
  "exonware-xwdata[xw]",
  "exonware-xwentity[xw]",
  "exonware-xwjson[xw]",
  "exonware-xwmodels[xw]",
  "exonware-xwnode[xw]",
  "exonware-xwquery[xw]",
]
full = [
  "exonware-xwlogin[xw]",
  "exonware-xwsystem[full]",
  "exonware-xwaction[xw]",
  "exonware-xwapi[xw]",
  "exonware-xwdata[xw]",
  "exonware-xwentity[xw]",
  "exonware-xwjson[xw]",
  "exonware-xwmodels[xw]",
  "exonware-xwnode[xw]",
  "exonware-xwquery[xw]",
]
dev = [
  "exonware-xwlogin[full]",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/exonware/xwlogin"
Repository = "https://github.com/exonware/xwlogin"
Issues = "https://github.com/exonware/xwlogin/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["--tb=short"]
markers = [
  "xwlogin_core: fast core / boundary tests (GUIDE_51)",
  "xwlogin_unit: unit-layer tests (GUIDE_51)",
]

[tool.hatch.version]
path = "src/exonware/xwlogin/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwlogin"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]
